--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header>
+    <header class="gray">
         <nav>
             <h3>Influencer products</h3>
             <ul>
@@ -15,7 +17,7 @@
                 <li><a href="">Products</a></li>
                 <li><a href="">Sign up</a></li>
                 <li><a href="">Log in</a></li>
-                <li></li>
+                <li><img src="images/Vector.svg" alt=""></li>
                 <li></li>
             </ul>
         </nav>
@@ -23,14 +25,153 @@
         <div class="banner-container">
             <div>
                 <h1 class="banner-title">Start your Journey as <br>Influencer</h1>
-                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                <button class="btn-primary banner-btn">Prebook now</button>
-                
+                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+                    <br>vestibulum sed scelerisque eros. Lectus faucibus.
+                </p>
+                <button class="btn-primary banner-btn">Prebook now <img class="btn-img" src="images/arrow-forward 1.svg"
+                        alt=""></button>
+
             </div>
             <div class="banner-img">
                 <img src="images/main-camera.png" alt="">
             </div>
         </div>
     </header>
+    <main>
+        <h1 style="text-align: center;">products</h1>
+        <section class="grid-container">
+            <div class="single-product">
+                <img src="resources/products/bag.png" alt="">
+                <div class="product-icon-name-container">
+                    <h3>product name</h3>
+                    <div>
+                        <span>i</span>
+                        <span>i</span>
+                        <span>i</span>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel sequi deserunt laboriosam ullam
+                    praesentium eos id nemo laborum corporis blanditiis.</p>
+                <p>price: 4155</p>
+            </div>
+            <div class="single-product">
+                <img src="resources/products/bag.png" alt="">
+                <div class="product-icon-name-container">
+                    <h3>product name</h3>
+                    <div>
+                        <span>i</span>
+                        <span>i</span>
+                        <span>i</span>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel sequi deserunt laboriosam ullam
+                    praesentium eos id nemo laborum corporis blanditiis.</p>
+                <p>price: 4155</p>
+            </div>
+            <div class="single-product">
+                <img src="resources/products/bag.png" alt="">
+                <div class="product-icon-name-container">
+                    <h3>product name</h3>
+                    <div>
+                        <span>i</span>
+                        <span>i</span>
+                        <span>i</span>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel sequi deserunt laboriosam ullam
+                    praesentium eos id nemo laborum corporis blanditiis.</p>
+                <p>price: 4155</p>
+            </div>
+            <div class="single-product">
+                <img src="resources/products/bag.png" alt="">
+                <div class="product-icon-name-container">
+                    <h3>product name</h3>
+                    <div>
+                        <span>i</span>
+                        <span>i</span>
+                        <span>i</span>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel sequi deserunt laboriosam ullam
+                    praesentium eos id nemo laborum corporis blanditiis.</p>
+                <p>price: 4155</p>
+            </div>
+            <div class="single-product">
+                <img src="resources/products/bag.png" alt="">
+                <div class="product-icon-name-container">
+                    <h3>product name</h3>
+                    <div>
+                        <span>i</span>
+                        <span>i</span>
+                        <span>i</span>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel sequi deserunt laboriosam ullam
+                    praesentium eos id nemo laborum corporis blanditiis.</p>
+                <p>price: 4155</p>
+            </div>
+            <div class="single-product">
+                <img src="resources/products/bag.png" alt="">
+                <div class="product-icon-name-container">
+                    <h3>product name</h3>
+                    <div>
+                        <span>i</span>
+                        <span>i</span>
+                        <span>i</span>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel sequi deserunt laboriosam ullam
+                    praesentium eos id nemo laborum corporis blanditiis.</p>
+                <p>price: 4155</p>
+            </div>
+            <div class="single-product">
+                <img src="resources/products/bag.png" alt="">
+                <div class="product-icon-name-container">
+                    <h3>product name</h3>
+                    <div>
+                        <span>i</span>
+                        <span>i</span>
+                        <span>i</span>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel sequi deserunt laboriosam ullam
+                    praesentium eos id nemo laborum corporis blanditiis.</p>
+                <p>price: 4155</p>
+            </div>
+            <div class="single-product">
+                <img src="resources/products/bag.png" alt="">
+                <div class="product-icon-name-container">
+                    <h3>product name</h3>
+                    <div>
+                        <span>i</span>
+                        <span>i</span>
+                        <span>i</span>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel sequi deserunt laboriosam ullam
+                    praesentium eos id nemo laborum corporis blanditiis.</p>
+                <p>price: 4155</p>
+            </div>
+        </section>
+
+        <section class="discount-section">
+            <div class="discount-container">
+                <div class="discount-img">
+                    <img src="./resources/discount/React-removebg-preview.png" alt="">
+                    <div class="discount-number">
+                        30%
+                    </div>
+                </div>
+                <div class="discount-text">
+                    <h3>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, placeat!</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam possimus explicabo <br> sequi, odio doloribus quidem iusto tempora deleniti repellendus corrupti?</p>
+                    <button>buy now</button>
+                </div>
+            </div>
+        </section>
+
+    </main>
 </body>
+
 </html>
